[gd_scene load_steps=36 format=2]

[ext_resource path="res://UI/Pause/Pause Items.png" type="Texture" id=1]
[ext_resource path="res://UI/Pause/Pause Members.png" type="Texture" id=2]
[ext_resource path="res://UI/Pause/Pause Menu Base.png" type="Texture" id=3]
[ext_resource path="res://UI/Pause/Pause Key.png" type="Texture" id=4]
[ext_resource path="res://UI/Pause/Sub Menu.png" type="Texture" id=5]
[ext_resource path="res://Misc/Font/Item Info.tres" type="DynamicFont" id=6]
[ext_resource path="res://Misc/Font/Pause Member HP.tres" type="DynamicFont" id=7]
[ext_resource path="res://UI/Pause/SP Icon.png" type="Texture" id=8]
[ext_resource path="res://UI/Cursor.png" type="Texture" id=9]
[ext_resource path="res://UI/Pause/Member Display.png" type="Texture" id=10]
[ext_resource path="res://Scripts/UI/ItemInventoryBox.gd" type="Script" id=11]
[ext_resource path="res://Assets/General/Demo Items SS.png" type="Texture" id=12]
[ext_resource path="res://UI/Menu Cursor.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/UI/PauseMembers.gd" type="Script" id=14]
[ext_resource path="res://Scripts/UI/PauseMenu.gd" type="Script" id=15]
[ext_resource path="res://Scripts/UI/Pause_Menu_Cursor.gd" type="Script" id=16]
[ext_resource path="res://Scripts/UI/SubMenu.gd" type="Script" id=17]
[ext_resource path="res://Scripts/UI/Pause_Menu_Item.gd" type="Script" id=18]
[ext_resource path="res://UI/Pause/Member Options.png" type="Texture" id=19]
[ext_resource path="res://Misc/Font/Move Select Theme.tres" type="Theme" id=20]
[ext_resource path="res://Misc/Font/Move Select.tres" type="DynamicFont" id=21]
[ext_resource path="res://Scripts/UI/Member_Options_Cursor.gd" type="Script" id=22]
[ext_resource path="res://Scripts/UI/MemberOptions.gd" type="Script" id=23]
[ext_resource path="res://UI/Pause/Member Stats.png" type="Texture" id=24]
[ext_resource path="res://Assets/General/Weapons SS.png" type="Texture" id=25]
[ext_resource path="res://Scripts/UI/Item_Menu_Cursor.gd" type="Script" id=26]
[ext_resource path="res://Scripts/UI/Pause_Items.gd" type="Script" id=27]
[ext_resource path="res://Scripts/UI/Pause_Trinkets.gd" type="Script" id=28]
[ext_resource path="res://Misc/Font/Trinket Held.tres" type="DynamicFont" id=29]
[ext_resource path="res://Assets/General/Misc Items SS.png" type="Texture" id=30]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://Misc/Font/Greenscr.ttf"

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 2
outline_color = Color( 0.47, 0.29892, 0.2256, 1 )
extra_spacing_space = -3
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 29 )

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://Misc/Font/Greenscr.ttf"

[sub_resource type="DynamicFont" id=5]
size = 12
outline_size = 2
outline_color = Color( 0.47, 0.29892, 0.2256, 1 )
extra_spacing_space = -3
font_data = SubResource( 4 )

[node name="PauseMenu" type="Node2D"]
script = ExtResource( 15 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="MainSelection" type="VBoxContainer" parent="."]
margin_left = -319.0
margin_top = -201.0
margin_right = -289.0
margin_bottom = 256.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 1.1, 1.1 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 58

[node name="Party" type="Label" parent="MainSelection"]
margin_left = 14.0
margin_right = 15.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Party"
clip_text = true
script = ExtResource( 18 )

[node name="Items" type="Label" parent="MainSelection"]
margin_left = 14.0
margin_top = 72.0
margin_right = 15.0
margin_bottom = 86.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Items"
clip_text = true
script = ExtResource( 18 )

[node name="Trinkets" type="Label" parent="MainSelection"]
margin_left = 14.0
margin_top = 144.0
margin_right = 15.0
margin_bottom = 158.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Trinkets"
clip_text = true
script = ExtResource( 18 )

[node name="Enemies" type="Label" parent="MainSelection"]
margin_left = 14.0
margin_top = 216.0
margin_right = 15.0
margin_bottom = 230.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Enemies"
clip_text = true
script = ExtResource( 18 )

[node name="Map" type="Label" parent="MainSelection"]
margin_left = 14.0
margin_top = 288.0
margin_right = 15.0
margin_bottom = 302.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Map"
clip_text = true
script = ExtResource( 18 )

[node name="Key" type="Label" parent="MainSelection"]
margin_left = 14.0
margin_top = 360.0
margin_right = 15.0
margin_bottom = 374.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Key"
clip_text = true
script = ExtResource( 18 )

[node name="MenuCursor" parent="MainSelection" instance=ExtResource( 13 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 432.0
margin_right = 27.0
margin_bottom = 457.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 16 )
menu_parent_path = NodePath("..")

[node name="Members" type="Sprite" parent="."]
visible = false
position = Vector2( 100, -56 )
texture = ExtResource( 2 )
script = ExtResource( 14 )

[node name="Display1" type="Sprite" parent="Members"]
position = Vector2( -105, -63 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 10 )
hframes = 5

[node name="Display2" type="Sprite" parent="Members"]
position = Vector2( 4.00002, -63 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 10 )
hframes = 5
frame = 1

[node name="Display3" type="Sprite" parent="Members"]
position = Vector2( 114, -62 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 10 )
hframes = 5
frame = 2

[node name="Display4" type="Sprite" parent="Members"]
visible = false
position = Vector2( -50, 78 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 10 )
hframes = 5
frame = 1

[node name="Display5" type="Sprite" parent="Members"]
visible = false
position = Vector2( 59, 78 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 10 )
hframes = 5
frame = 1

[node name="Cursors" type="Node2D" parent="Members"]
visible = false

[node name="Cursor1" type="Sprite" parent="Members/Cursors"]
position = Vector2( -157, -137 )
texture = ExtResource( 9 )

[node name="Cursor2" type="Sprite" parent="Members/Cursors"]
visible = false
position = Vector2( -48, -137 )
texture = ExtResource( 9 )

[node name="Cursor3" type="Sprite" parent="Members/Cursors"]
visible = false
position = Vector2( 61, -137 )
texture = ExtResource( 9 )

[node name="Cursor4" type="Sprite" parent="Members/Cursors"]
visible = false
position = Vector2( -103, 3 )
texture = ExtResource( 9 )

[node name="Cursor5" type="Sprite" parent="Members/Cursors"]
visible = false
position = Vector2( 6, 3 )
texture = ExtResource( 9 )

[node name="Name1" type="Label" parent="Members"]
margin_left = -140.0
margin_top = -122.0
margin_right = -84.0
margin_bottom = -108.0
custom_fonts/font = ExtResource( 6 )
text = "Gary"
align = 1

[node name="Name2" type="Label" parent="Members"]
margin_left = -31.0
margin_top = -122.0
margin_right = 25.0
margin_bottom = -108.0
custom_fonts/font = ExtResource( 6 )
text = "Jacques"
align = 1

[node name="Name3" type="Label" parent="Members"]
margin_left = 78.0
margin_top = -121.0
margin_right = 134.0
margin_bottom = -107.0
custom_fonts/font = ExtResource( 6 )
text = "Irina"
align = 1

[node name="Name4" type="Label" parent="Members"]
visible = false
margin_left = -86.0
margin_top = 19.0
margin_right = -30.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 6 )
text = "Suzy"
align = 1

[node name="Name5" type="Label" parent="Members"]
visible = false
margin_left = 23.0
margin_top = 19.0
margin_right = 79.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 6 )
text = "Damien"
align = 1

[node name="Hidden2" type="Sprite" parent="Members"]
visible = false
self_modulate = Color( 1, 0.960784, 1, 1 )
position = Vector2( -4, -116 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 9 )

[node name="Hidden3" type="Sprite" parent="Members"]
visible = false
self_modulate = Color( 1, 0.960784, 1, 1 )
position = Vector2( 106, -115 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 9 )

[node name="Hidden4" type="Sprite" parent="Members"]
self_modulate = Color( 1, 0.960784, 1, 1 )
position = Vector2( -58, 25 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 9 )

[node name="Hidden5" type="Sprite" parent="Members"]
self_modulate = Color( 1, 0.960784, 1, 1 )
position = Vector2( 51, 25 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 9 )

[node name="HP1" type="Label" parent="Members"]
margin_left = -153.0
margin_top = -29.0
margin_right = -68.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 7 )
text = "HP: 121/121"
align = 1

[node name="HP2" type="Label" parent="Members"]
margin_left = -44.0
margin_top = -29.0
margin_right = 41.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 7 )
text = "HP: 153/153"
align = 1

[node name="HP3" type="Label" parent="Members"]
margin_left = 65.0
margin_top = -29.0
margin_right = 150.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 7 )
text = "HP: 207/207"
align = 1

[node name="HP4" type="Label" parent="Members"]
visible = false
margin_left = -99.0
margin_top = 112.0
margin_right = -14.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 7 )
text = "HP: 104/104"
align = 1

[node name="HP5" type="Label" parent="Members"]
visible = false
margin_left = 10.0
margin_top = 112.0
margin_right = 95.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 7 )
text = "HP: 115/115"
align = 1

[node name="Stats" type="Sprite" parent="."]
visible = false
position = Vector2( 100, -56 )
texture = ExtResource( 24 )

[node name="Name" type="Label" parent="Stats"]
margin_left = -136.0
margin_top = -79.0
margin_right = -80.0
margin_bottom = -65.0
custom_fonts/font = ExtResource( 6 )
text = "Gary"
align = 1

[node name="Display" type="Sprite" parent="Stats"]
position = Vector2( -101, -16 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 10 )
hframes = 5

[node name="WeaponDisplay" type="Sprite" parent="Stats"]
position = Vector2( -109, 90 )
texture = ExtResource( 25 )
hframes = 9
vframes = 3

[node name="Stats" type="Label" parent="Stats"]
margin_left = 28.0
margin_top = -122.0
margin_right = 89.0
margin_bottom = -104.0
custom_fonts/font = SubResource( 2 )
text = "Stats"
align = 1

[node name="Weapon" type="Label" parent="Stats"]
margin_left = -11.0
margin_top = -75.0
margin_right = 45.0
margin_bottom = -61.0
custom_fonts/font = ExtResource( 6 )
text = "Weapon"
align = 1

[node name="Trinket" type="Label" parent="Stats"]
margin_left = -11.0
margin_top = -41.0
margin_right = 45.0
margin_bottom = -27.0
custom_fonts/font = ExtResource( 6 )
text = "Trinket"
align = 1

[node name="HP" type="Label" parent="Stats"]
margin_left = -12.0
margin_top = -7.0
margin_right = 44.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 6 )
text = "HP"
align = 1

[node name="Attack" type="Label" parent="Stats"]
margin_left = -11.0
margin_top = 27.0
margin_right = 45.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 6 )
text = "Attack"
align = 1

[node name="Magic" type="Label" parent="Stats"]
margin_left = -11.0
margin_top = 61.0
margin_right = 45.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 6 )
text = "Magic"
align = 1

[node name="Defense" type="Label" parent="Stats"]
margin_left = -11.0
margin_top = 95.0
margin_right = 45.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 6 )
text = "Defense"
align = 1

[node name="Weapon_info" type="Label" parent="Stats"]
margin_left = 59.0
margin_top = -80.5
margin_right = 131.0
margin_bottom = -53.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 6 )
text = "Red Fender"
align = 1
autowrap = true

[node name="Trinket_info" type="Label" parent="Stats"]
margin_left = 59.0
margin_top = -45.5
margin_right = 131.0
margin_bottom = -18.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 6 )
text = "Gold Bracelet"
align = 1
autowrap = true

[node name="HP_info" type="Label" parent="Stats"]
margin_left = 65.0
margin_top = -6.0
margin_right = 121.0
margin_bottom = 8.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 6 )
text = "121/121"
align = 1

[node name="Attack_info" type="Label" parent="Stats"]
margin_left = 66.0
margin_top = 28.0
margin_right = 122.0
margin_bottom = 42.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 6 )
text = "57"
align = 1

[node name="Magic_info" type="Label" parent="Stats"]
margin_left = 66.0
margin_top = 62.0
margin_right = 122.0
margin_bottom = 76.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 6 )
text = "53"
align = 1

[node name="Defense_info" type="Label" parent="Stats"]
margin_left = 66.0
margin_top = 95.0
margin_right = 122.0
margin_bottom = 109.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 6 )
text = "37"
align = 1

[node name="Items" type="Sprite" parent="."]
visible = false
position = Vector2( 97, -58 )
texture = ExtResource( 1 )
script = ExtResource( 27 )

[node name="ItemPanel" type="Node2D" parent="Items"]
position = Vector2( -6, 28 )

[node name="ItemInventoryBox" type="VBoxContainer" parent="Items/ItemPanel"]
margin_left = -134.0
margin_top = -186.0
margin_right = -109.0
margin_bottom = -161.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 9
script = ExtResource( 11 )

[node name="ItemMenuCursor" parent="Items/ItemPanel" instance=ExtResource( 13 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -134.0
margin_top = -186.0
margin_right = -109.0
margin_bottom = -161.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 26 )
menu_parent_path = NodePath("../ItemInventoryBox")
cursor_offset = Vector2( 17, 2.5 )

[node name="Stock" type="Label" parent="Items"]
margin_left = 50.0
margin_top = -43.0
margin_right = 106.0
margin_bottom = -29.0
theme = SubResource( 3 )
text = "Stock:"

[node name="Stock_amount" type="Label" parent="Items"]
margin_left = 88.0
margin_top = -43.0
margin_right = 144.0
margin_bottom = -29.0
theme = SubResource( 3 )
text = "100"
align = 1

[node name="ItemInfo" type="Label" parent="Items"]
margin_left = 40.0
margin_top = 3.0
margin_right = 142.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 6 )
text = "20 HP"
align = 1
autowrap = true

[node name="ItemInventory" type="Sprite" parent="Items"]
position = Vector2( 90, -121 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 12 )
hframes = 3
vframes = 3

[node name="Trinkets" type="Sprite" parent="."]
position = Vector2( 97, -58 )
texture = ExtResource( 1 )
script = ExtResource( 28 )

[node name="TrinketsPanel" type="Node2D" parent="Trinkets"]
position = Vector2( -140, -158 )

[node name="TrinketInventory" type="VBoxContainer" parent="Trinkets/TrinketsPanel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="TrinketCursor" parent="Trinkets/TrinketsPanel" instance=ExtResource( 13 )]
margin_right = 25.0
margin_bottom = 25.0
script = null

[node name="TrinketInventory" type="Sprite" parent="Trinkets"]
position = Vector2( 90, -121 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 12 )
hframes = 3
vframes = 3
frame = 6

[node name="Held_name" type="Label" parent="Trinkets"]
margin_left = 62.0
margin_top = -43.0
margin_right = 118.0
margin_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 5 )
text = "Jacques"
align = 1

[node name="TrinketInfo" type="Label" parent="Trinkets"]
margin_left = 40.0
margin_top = 3.0
margin_right = 142.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 6 )
text = "Increases holder's Attack by 20%"
align = 1
autowrap = true

[node name="Enemies" type="Sprite" parent="."]
visible = false
position = Vector2( 97, -58 )
texture = ExtResource( 1 )

[node name="Map" type="Sprite" parent="."]
visible = false
position = Vector2( 97, -58 )
texture = ExtResource( 1 )

[node name="Key" type="Sprite" parent="."]
visible = false
position = Vector2( 97, -58 )
texture = ExtResource( 4 )

[node name="KeyPanel" type="Node2D" parent="Key"]
position = Vector2( -140, -158 )

[node name="KeyInventory" type="VBoxContainer" parent="Key/KeyPanel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="KeyCursor" parent="Key/KeyPanel" instance=ExtResource( 13 )]
visible = false
margin_right = 25.0
margin_bottom = 25.0
script = null

[node name="KeyInfo" type="Label" parent="Key/KeyPanel"]
margin_left = 179.0
margin_top = 100.0
margin_right = 281.0
margin_bottom = 172.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 6 )
text = "No key items"
align = 1
autowrap = true

[node name="KeyDisplay" type="Sprite" parent="Key/KeyPanel"]
visible = false
position = Vector2( 230, 36 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 12 )
hframes = 3
vframes = 3
frame = 6

[node name="Seed1" type="Sprite" parent="Key"]
position = Vector2( 0, 40 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 30 )
hframes = 10
vframes = 3

[node name="SubMenu" type="Sprite" parent="."]
position = Vector2( 101, 213 )
texture = ExtResource( 5 )
script = ExtResource( 17 )

[node name="SP Icon" type="Sprite" parent="SubMenu"]
position = Vector2( -115, -26 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="SP" type="Label" parent="SubMenu"]
margin_left = -123.0
margin_top = -32.0
margin_right = -62.0
margin_bottom = -18.0
theme = SubResource( 3 )
text = "SP"
align = 1

[node name="SP_amount" type="Label" parent="SubMenu"]
margin_left = -59.0
margin_top = -31.0
margin_right = 2.0
margin_bottom = -17.0
theme = SubResource( 3 )
text = "121/121"
align = 1

[node name="Marbles" type="Label" parent="SubMenu"]
margin_left = -128.0
margin_top = 7.0
margin_right = -72.0
margin_bottom = 21.0
theme = SubResource( 3 )
text = "Marbles"

[node name="Marbles_amount" type="Label" parent="SubMenu"]
margin_left = -58.0
margin_top = 7.0
margin_right = -2.0
margin_bottom = 21.0
theme = SubResource( 3 )
text = "6567"
align = 1

[node name="Level" type="Label" parent="SubMenu"]
margin_left = 20.0
margin_top = -32.0
margin_right = 76.0
margin_bottom = -18.0
theme = SubResource( 3 )
text = "Level"

[node name="Level_amount" type="Label" parent="SubMenu"]
margin_left = 86.0
margin_top = -32.0
margin_right = 142.0
margin_bottom = -18.0
theme = SubResource( 3 )
text = "2"
align = 1

[node name="Next" type="Label" parent="SubMenu"]
margin_left = 10.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 21.0
theme = SubResource( 3 )
text = "Next Lvl"

[node name="Next_amount" type="Label" parent="SubMenu"]
margin_left = 83.0
margin_top = 7.0
margin_right = 144.0
margin_bottom = 21.0
theme = SubResource( 3 )
text = "3842"
align = 1

[node name="MemberOptions" type="Sprite" parent="."]
visible = false
position = Vector2( 97, 146 )
texture = ExtResource( 19 )
script = ExtResource( 23 )

[node name="VBoxOptions" type="VBoxContainer" parent="MemberOptions"]
margin_left = -28.0
margin_top = -26.0
margin_right = 28.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 10
alignment = 1

[node name="Switch" type="Label" parent="MemberOptions/VBoxOptions"]
margin_right = 55.0
margin_bottom = 15.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme = ExtResource( 20 )
custom_colors/font_color = Color( 0.976471, 0.964706, 0.964706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.156863 )
custom_fonts/font = ExtResource( 21 )
text = "Switch"
align = 1
valign = 1
script = ExtResource( 18 )

[node name="Info" type="Label" parent="MemberOptions/VBoxOptions"]
margin_left = 9.0
margin_top = 25.0
margin_right = 46.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 0 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 20 )
custom_colors/font_color = Color( 0.976471, 0.964706, 0.964706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.156863 )
custom_fonts/font = ExtResource( 21 )
text = "Info"
align = 1
valign = 1
script = ExtResource( 18 )

[node name="MemberOptionsCursor" parent="MemberOptions/VBoxOptions" instance=ExtResource( 13 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 50.0
margin_right = 40.0
margin_bottom = 75.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 22 )
menu_parent_path = NodePath("..")
cursor_offset = Vector2( 17, 2.5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="item_selecting" from="MainSelection/MenuCursor" to="Items/ItemPanel/ItemInventoryBox" method="_on_MenuCursor_item_selecting"]
[connection signal="item_selecting" from="MainSelection/MenuCursor" to="Items/ItemPanel/ItemMenuCursor" method="_on_MenuCursor_item_selecting"]
[connection signal="party_selecting" from="MainSelection/MenuCursor" to="Members" method="_on_MenuCursor_party_selecting"]
[connection signal="retread" from="MainSelection/MenuCursor" to="." method="_on_MenuCursor_retread"]
[connection signal="retread" from="MainSelection/MenuCursor" to="Members" method="_on_MenuCursor_retread"]
[connection signal="item_usage" from="Members" to="Items/ItemPanel/ItemInventoryBox" method="_on_Members_item_usage"]
[connection signal="member_options" from="Members" to="MemberOptions" method="_on_Members_member_options"]
[connection signal="empty_items" from="Items/ItemPanel/ItemInventoryBox" to="Items" method="_on_ItemInventoryBox_empty_items"]
[connection signal="heal_item_chosen" from="Items/ItemPanel/ItemInventoryBox" to="MainSelection/MenuCursor" method="_on_ItemInventoryBox_heal_item_chosen"]
[connection signal="heal_item_chosen" from="Items/ItemPanel/ItemInventoryBox" to="Members" method="_on_ItemInventoryBox_heal_item_chosen"]
[connection signal="return_to_item" from="Items/ItemPanel/ItemInventoryBox" to="MainSelection/MenuCursor" method="_on_ItemInventoryBox_return_to_item"]
[connection signal="return_to_item" from="Items/ItemPanel/ItemInventoryBox" to="Items/ItemPanel/ItemMenuCursor" method="_on_ItemInventoryBox_return_to_item"]
[connection signal="retread" from="Items/ItemPanel/ItemMenuCursor" to="MainSelection/MenuCursor" method="_on_ItemMenuCursor_retread"]
[connection signal="retread" from="Items/ItemPanel/ItemMenuCursor" to="Items/ItemPanel/ItemInventoryBox" method="_on_ItemMenuCursor_retread"]
[connection signal="party_selecting" from="MemberOptions/VBoxOptions/MemberOptionsCursor" to="Members" method="_on_MemberOptionsCursor_party_selecting"]
[connection signal="party_selecting" from="MemberOptions/VBoxOptions/MemberOptionsCursor" to="MemberOptions" method="_on_MemberOptionsCursor_party_selecting"]
[connection signal="retread" from="MemberOptions/VBoxOptions/MemberOptionsCursor" to="." method="_on_MemberOptionsCursor_retread"]
[connection signal="retread" from="MemberOptions/VBoxOptions/MemberOptionsCursor" to="MainSelection/MenuCursor" method="_on_MemberOptionsCursor_retread"]
[connection signal="show_stats" from="MemberOptions/VBoxOptions/MemberOptionsCursor" to="." method="_on_MemberOptionsCursor_show_stats"]
[connection signal="show_stats" from="MemberOptions/VBoxOptions/MemberOptionsCursor" to="MainSelection/MenuCursor" method="_on_MemberOptionsCursor_show_stats"]
[connection signal="switch_selecting" from="MemberOptions/VBoxOptions/MemberOptionsCursor" to="Members" method="_on_MemberOptionsCursor_switch_selecting"]
[connection signal="switch_selecting" from="MemberOptions/VBoxOptions/MemberOptionsCursor" to="MemberOptions" method="_on_MemberOptionsCursor_switch_selecting"]
